-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.12.0, Qt Creator 4.12.1
-
-
20c387f63630b49d9383af9fadbf16c5aaadeaa6 (qt-creator/qt-creator/4.12)
Clicking Build > QML Preview crashes Qt Creator consistently. This occurs at least with the quick template project. Crash occurs as soon as project is built.
In comparison Qml preview works with the same kit and same project in QtC 4.11.
- is duplicated by
-
QTCREATORBUG-24060 QmlDesigner: Crash when launching QmlPreview on qmake based project
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-24056 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
301433,2 | QmlPreview: Don't use MainFileAspect if it doesn't exist | 4.12 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |